--- a/src/app/pokemons/pokemons.component.html
+++ b/src/app/pokemons/pokemons.component.html
@@ -8,10 +8,12 @@
         <div class="pokemonPoster" *ngFor="let poke of pokemonsList">
             <p>{{poke.name}}</p>
             <p>{{poke.id}}</p>
-            <!-- <p>{{poke.imgUrl}}</p> -->
-            <img src="{{poke.imgUrl}}" alt="">
+            
+            <img src="{{poke.sprites.front_shiny}}" alt="">
+            <p *ngFor="let item of poke.types" class="{{item.type.name}}">{{item.type.name}}</p>
         </div>
     </div>
 
 </div>
+
 <button (click)="morePokemons()">MOREEEEE</button>
