--- a/src/app/pokemons/pokemons.component.css
+++ b/src/app/pokemons/pokemons.component.css
@@ -44,13 +44,13 @@
     text-transform: capitalize;
     margin-left: 6px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     flex-wrap: wrap;
 }
 .types{
     margin-top: 10px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     flex-wrap: wrap;
 
 }
