--- a/src/app/pokemons/pokemons.component.html
+++ b/src/app/pokemons/pokemons.component.html
@@ -1,9 +1,11 @@
 <div class="header">Pokedex</div>
 <div *ngIf="pokemonsList">
-    <select class="selectPokemon" (change)="filterPokeType($event)">
-        <option value="">Select all</option>
+    
+    <select class="selectPokemon" (change)="filterPokeType($event)" [(ngModel)]="pokeFilter">
+        <option value="" >Select all</option>
         <option *ngFor="let type of pokemonTypesList" value="{{type.name}}">{{type.name}}</option>
     </select>
+
     <div class="pokemonContainer">
         <div class="pokemonPoster" *ngFor="let poke of pokemonsList | pokeFilter:pokeFilter" (click)="pokeDetails(poke.id)">
             <img src="{{poke.sprites.front_shiny}}" class="image">
@@ -13,6 +15,7 @@
             </div>
         </div>
     </div>
+
     <div class="pokeDetails" *ngIf="pokemonDetails">
         <div class="detailsSkillsPoke">
             <div><img [src]="pokemonDetails.sprites.front_shiny" class="imageDetails"></div>
