--- a/src/app/pokemons/pokemons.component.html
+++ b/src/app/pokemons/pokemons.component.html
@@ -64,6 +64,6 @@
         </div>
 
     </div>
-    <img src="https://cdn1.iconfinder.com/data/icons/media-icons-23/100/top-512.png"  (click)="gotoDown()" class="downButton">
-    <img src="https://cdn1.iconfinder.com/data/icons/media-icons-23/100/top-512.png" *ngIf="isShowT" (click)="gotoTop()" class="topButton">
+    <img src="https://cdn.onlinewebfonts.com/svg/img_425228.png"  (click)="gotoDown()" class="downButton">
+    <img src="https://cdn.onlinewebfonts.com/svg/img_425228.png" *ngIf="isShowT" (click)="gotoTop()" class="topButton">
     
